fix: remove unwanted input number & tex tstyles on safari,firefox

--- a/src/index.css
+++ b/src/index.css
@@ -43,10 +43,23 @@ body {
   background: var(--gray);
 }
 
+input::-webkit-contacts-auto-fill-button {
+  visibility: hidden;
+  display: none !important;
+  pointer-events: none;
+  position: absolute;
+  right: 0;
+}
+
 input[type='number']::-webkit-inner-spin-button,
 input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+input[type='number'] {
+  -moz-appearance: textfield;
+  appearance: textfield;
 }
 
 @media (prefers-color-scheme: dark) {
